--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,32 @@
 h1{
-  font-size: 60px;
+  font-size:10rem;
 }
-ul{
-  list-style-type: disc;
-  margin: 1rem;
+.container{
+  position: relative;
+  width:600px;
+  height:600px;
+  margin:100px;
 }
-ol{
-  list-style-position: inside;
-  padding: 1rem;
-  list-style: decimal;
+.container .box{
+  color:white;
+  position: relative;
+  width:calc(400px- 30px);
+  height:calc(400px- 30px);
+  background: #000;
+  float:left;
+  margin: 20px;
+  box-sizing:border-box;
+  font-size:25px;
+}
+p{
+  font-size:25px;
+  
+}
+body{
+  background-color:bisque;
+}
+#Hacker{
+  float:right;
+  width:600px;
+  height:400px;
 }
