--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,52 @@
-h1{
-  font-size:10rem;
-}
-.container{
-  position: relative;
-  width:600px;
-  height:600px;
-  margin:100px;
-}
-.container .box{
-  color:white;
-  position: relative;
-  width:calc(400px- 30px);
-  height:calc(400px- 30px);
-  background: #000;
-  float:left;
-  margin: 20px;
-  box-sizing:border-box;
-  font-size:25px;
-}
-p{
-  font-size:25px;
-  
-}
 body{
-  background-color:bisque;
+  background-color: beige;
 }
-#Hacker{
-  float:right;
-  width:600px;
-  height:400px;
+h1{
+  font-size:3rem;
+  position:relative;
+}
+footer{
+  bottom:0;
+  width:100%;
+  height: 2.5rem;
+}
+h2{
+  font-size:3rem;
+  font-weight: 700;
+}
+#Fav{
+  padding: 30px;
+  text-align: center;
+  font-size:40px;
+  color:black;
+  background-color:darkolivegreen;
+}
+h3{
+  font-size: 20px;
+  font-weight: 800;
+}
+.Bio{
+  width:1000px;
+  height:600px;
+
+}
+.row{
+  height:33%;
+  width:100%;
+  text-align: center;
+}
+.row ul{
+  width:48%;
+  display:inline-block;
+  font-weight: 700;
+}
+.row div{
+  width:48%;
+  display:inline-block;
+  font-weight: 700;
+}
+.row div:first-child{
+  font-weight: 700;
+  font-size:50px;
+  flex: auto;
 }
