--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
   background-color: beige;
+  height:1400px;
 }
 h1{
   font-size:3rem;
@@ -8,7 +9,7 @@ h1{
 footer{
   bottom:0;
   width:100%;
-  height: 2.5rem;
+  position:fixed;
 }
 h2{
   font-size:3rem;
