--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: beige;
+  background-color: #EDC79B;
   height:1400px;
 }
 h1{
@@ -19,8 +19,8 @@ h2{
   padding: 30px;
   text-align: center;
   font-size:40px;
-  color:black;
-  background-color:darkolivegreen;
+  color:#713E5A;
+  background-color:#63A375;
 }
 h3{
   font-size: 20px;
