Added the functions to the 5 questions, then added the questions to arrays and had a while loop run thru the questions.

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,10 @@ body {
   background-color: #EDC79B;
   height: 1400px;
 }
-
+img{
+  max-width: 20%;
+  float:right;
+}
 h1 {
   font-size: 3rem;
   position: relative;
